@@ -6,6 +6,8 @@ Cobbler CHANGELOG
 - Kickstart tracking now understands Apache logs
 - Added support for --rpm-list parameter to "repo add" for download of partial content from repositories
   (ex: cobbler and koan from FC6extras, w/o games).
+- More consistant naming on imports, regardless of data source.
+- Teach cobbler to remove .olddata dirs, which can happen if createrepo crashes or is killed mid-process
 
 * Thu Apr 05 2007 - 0.4.6
 - Bind cobbler_syslogd to all addresses
